[gd_scene load_steps=22 format=3 uid="uid://dt0g5ekhrghn3"]

[ext_resource type="Texture2D" uid="uid://ccbefxbhjge3h" path="res://Assets/Art/Room_04_Background.png" id="1_6m87v"]
[ext_resource type="Script" uid="uid://c5n4q837qkmdb" path="res://Scripts/RoomEvents/common_utility_upgrade.gd" id="1_of6sx"]
[ext_resource type="Texture2D" uid="uid://bu7mymmyyfan2" path="res://Assets/Art/Events/merch_upgrade_back.png" id="2_of6sx"]
[ext_resource type="Texture2D" uid="uid://2kh6snshkwr5" path="res://Assets/Art/Events/merch_upgrade_fore.png" id="3_r0kne"]
[ext_resource type="FontFile" uid="uid://dqgfi4u7flyld" path="res://Assets/UI/Fonts/Button_Immortal.ttf" id="4_6nhqd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f5tux"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jvpcw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_avxmd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fbxj4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hs18u"]

[sub_resource type="Animation" id="Animation_fd7rg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainEvent:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_rf8ty"]
resource_name = "hide_event"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainEvent:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_brd4a"]
resource_name = "show_event"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainEvent:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_16kcj"]
_data = {
&"RESET": SubResource("Animation_fd7rg"),
&"hide_event": SubResource("Animation_rf8ty"),
&"show_event": SubResource("Animation_brd4a")
}

[sub_resource type="Animation" id="Animation_cj7pc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainEvent/picFore:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, 0.25)]
}

[sub_resource type="Animation" id="Animation_70l1b"]
resource_name = "guy_idle"
length = 3.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainEvent/picFore:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(0.27, 0.26), Vector2(0.25, 0.25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1irvj"]
_data = {
&"RESET": SubResource("Animation_cj7pc"),
&"guy_idle": SubResource("Animation_70l1b")
}

[sub_resource type="Animation" id="Animation_hefxu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainEvent/lblAction:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mainEvent/lblAction:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(520, 316)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mainEvent/lblAction:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5icfo"]
resource_name = "hide_text"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainEvent/lblAction:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mainEvent/lblAction:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(520, 260), Vector2(520, 316)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mainEvent/lblAction:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vs00n"]
resource_name = "show_text"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mainEvent/lblAction:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mainEvent/lblAction:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(520, 316), Vector2(520, 260)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mainEvent/lblAction:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2m673"]
_data = {
&"RESET": SubResource("Animation_hefxu"),
&"hide_text": SubResource("Animation_5icfo"),
&"show_text": SubResource("Animation_vs00n")
}

[node name="CommonUtilityUpgrade" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_of6sx")

[node name="picBack" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6m87v")
expand_mode = 1

[node name="mainEvent" type="Control" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="picBack" type="TextureRect" parent="mainEvent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -463.5
offset_top = -540.5
offset_right = 463.5
offset_bottom = 540.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(463, 540)
texture = ExtResource("2_of6sx")

[node name="picFore" type="TextureRect" parent="mainEvent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -474.0
offset_top = -797.0
offset_right = 453.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(473, 882)
texture = ExtResource("3_r0kne")

[node name="lblAction" type="Label" parent="mainEvent"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -172.0
offset_right = 248.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(248, 35)
theme_override_colors/font_color = Color(0.899266, 0.805079, 0.264486, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.458824)
theme_override_colors/font_outline_color = Color(0.50771, 0.241023, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_6nhqd")
theme_override_font_sizes/font_size = 55
text = "Talk?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="mainEvent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -109.0
offset_right = 96.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_f5tux")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jvpcw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_avxmd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fbxj4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hs18u")

[node name="animEvent" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_16kcj")
}

[node name="animGuy" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1irvj")
}

[node name="animText" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2m673")
}
