class_name CommonUtilityUpgradeRoom
extends RoomEvent


@onready var button: Button = $mainEvent/Button
@onready var lbl_action: Label = $mainEvent/lblAction
@onready var anim_label: AnimationPlayer = $AnimText
@onready var anim_guy: AnimationPlayer = $AnimGuy
@onready var anim_event: AnimationPlayer = $animEvent

